# money_transaction_service

./: .env.template  LICENSE  README.md  alembic.ini  makemigrations.sh  migrate.sh  pyproject.toml  requirements.txt  ruff.toml  start.sh
auth_service/: main.py
auth_service/api/dependencies/: auth.py  database.py
auth_service/api/endpoints/: user.py
auth_service/api/routers/: router.py
auth_service/configs/: config.py  loggers.py
auth_service/crud/: user.py  user_auth.py
auth_service/crud/crud_mixins/: __init__.py  base.py
auth_service/models/: user.py
auth_service/schemas/: password.py  user.py
auth_service/services/: tokens.py
common/configs/: config.py  loggers.py
common/databases/: database.py
common/databases/migrations/: env.py
common/models/: __init__.py
common/schemas/: password.py  token.py
common/security/: token.py
docker/: Dockerfile  Dockerfile.auth  Dockerfile.base  Dockerfile.transaction  docker-compose.yml
docker/nginx/: nginx.conf
src/: alembic.ini
src/auth_service/: main.py
src/auth_service/api/: root_endpoints.py
src/auth_service/models/: user.py
src/auth_service/schemas/: email_validator.py  token.py
src/configs/: loggers.py
src/databases/: database.py
src/transaction_service/: main.py
transaction_service/: main.py
transaction_service/configs/: loggers.py
transaction_service/constants/: transaction.py
transaction_service/crud/: transaction.py  user_auth.py
transaction_service/models/: transaction.py
transaction_service/schemas/: transaction.py
transaction_service/services/: transaction.py
(+15 files in other folders)
