[tool.poetry]
name = "money-transaction-service"
version = "0.1.0"
description = ""
authors = ["Ilya Myakishev <ilyamyakishev96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
alembic = "^1.14.0"
SQLAlchemy = "^2.0.36"
pydantic = "^2.9.2"
asyncpg = "0.28.0"
ruff = "0.5.1"
fastapi-filter = "^1.1.0"
pydantic-settings = "^2.6.1"
python-json-logger = "^2.0.7"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
